{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 109,
  "lineage": "723172d4-b725-e812-3730-eb6bd250ab80",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rt-toptal_k8s_infa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121235427110:route-table/rtb-0c3a41c58ef138929",
            "default_route_table_id": "rtb-0c3a41c58ef138929",
            "id": "rtb-0c3a41c58ef138929",
            "owner_id": "121235427110",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b79e6912a571800e",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b79e6912a571800e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "K8S Cluster Routing Table"
            },
            "tags_all": {
              "Name": "K8S Cluster Routing Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0885a367dee131bb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_loadbalancers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-001d49e19d82532bc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-001d49e19d82532bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0292af9806e1618cf",
            "private_dns": "ip-10-0-0-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.92",
            "public_ip": "18.213.247.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d9fd89a3adbc8e0",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-LB-1",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-LB-1",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-04f4e03855b6a46b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f4e03855b6a46b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ace647792cb00e6c",
            "private_dns": "ip-10-0-0-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_ip": "44.201.21.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-068d46b304b066b2d",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-LB-2",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-LB-2",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-0897f170025b1eb04",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0897f170025b1eb04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041c5d6af185f92c9",
            "private_dns": "ip-10-0-0-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.140",
            "public_ip": "52.3.236.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004976088243ab802",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-1",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-1",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-0724a9e65206188d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0724a9e65206188d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04b4d746b77fd4c58",
            "private_dns": "ip-10-0-0-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.45",
            "public_ip": "3.215.176.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00056ef371b5ee004",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-2",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-2",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-08f686b3bdddb3022",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f686b3bdddb3022",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b83c2c3fc42fd2aa",
            "private_dns": "ip-10-0-0-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.225",
            "public_ip": "34.231.169.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f25201c13ddf409",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-3",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-MASTER-3",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-04463b83aae362296",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04463b83aae362296",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04841bb2625ef09c8",
            "private_dns": "ip-10-0-0-72.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.72",
            "public_ip": "44.200.46.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b186f762b8b79c7",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-1",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-1",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-0efc0bf7db538b72a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efc0bf7db538b72a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0388a5e1b41fe6089",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.101",
            "public_ip": "44.200.220.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b628c4b8a53231ac",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-2",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-2",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:121235427110:instance/i-0ea4e8e265861ef5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea4e8e265861ef5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ht-pko",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0042da97217576ca1",
            "private_dns": "ip-10-0-0-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.85",
            "public_ip": "54.164.203.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b501f07593901df",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ef2d12afcbe1b38",
            "tags": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-3",
              "OS": "UBUNTU"
            },
            "tags_all": {
              "Environment": "PRODUCTION",
              "Managed": "IAC",
              "Name": "TT-K8S-WORKER-3",
              "OS": "UBUNTU"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3f574fb7f9b68c4"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw-toptal_k8s_infra",
            "aws_security_group.sg-toptal_k8s_infra",
            "aws_subnet.subnet-toptal_k8s_infra",
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-toptal_k8s_infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121235427110:internet-gateway/igw-0b79e6912a571800e",
            "id": "igw-0b79e6912a571800e",
            "owner_id": "121235427110",
            "tags": {
              "Name": "K8S Cluster Internet GW/Router"
            },
            "tags_all": {
              "Name": "K8S Cluster Internet GW/Router"
            },
            "vpc_id": "vpc-0885a367dee131bb1"
          },
          "dependencies": [
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-toptal_k8s_infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121235427110:security-group/sg-0e3f574fb7f9b68c4",
            "description": "tt-k8s-cluster-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3f574fb7f9b68c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tt-k8s-cluster-security-group",
            "name_prefix": "",
            "owner_id": "121235427110",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0885a367dee131bb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-toptal_k8s_infra"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-toptal_k8s_infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121235427110:subnet/subnet-06ef2d12afcbe1b38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ef2d12afcbe1b38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "121235427110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "K8S Cluster Subnet"
            },
            "tags_all": {
              "Name": "K8S Cluster Subnet"
            },
            "vpc_id": "vpc-0885a367dee131bb1"
          },
          "dependencies": [
            "aws_vpc.vpc-toptal_k8s_infra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-toptal_k8s_infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121235427110:vpc/vpc-0885a367dee131bb1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-057f7d01029ba3aa7",
            "default_route_table_id": "rtb-0c3a41c58ef138929",
            "default_security_group_id": "sg-03b7e3109b73d4c40",
            "dhcp_options_id": "dopt-066bcacabddfb77c7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0885a367dee131bb1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3a41c58ef138929",
            "owner_id": "121235427110",
            "tags": {
              "Name": "K8S Cluster VPC"
            },
            "tags_all": {
              "Name": "K8S Cluster VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}